{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 107,
  "lineage": "cf70a5ee-fc71-11fa-e13d-29ad4da0008e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-2:163447728448:transit-gateway/tgw-0ba59707b304ccc8e",
            "association_default_route_table_id": "tgw-rtb-0d5170b3a5c3ffd84",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit gateway for connecting bastion and app VPCs",
            "dns_support": "enable",
            "id": "tgw-0ba59707b304ccc8e",
            "multicast_support": "disable",
            "owner_id": "163447728448",
            "propagation_default_route_table_id": "tgw-rtb-0d5170b3a5c3ffd84",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "bastion-app-tgw"
            },
            "tags_all": {
              "Name": "bastion-app-tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "app_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0852ae4b8792fd0b0",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0b07eba272c266441"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0ba59707b304ccc8e",
            "vpc_id": "vpc-07102c5f1f6695e3d",
            "vpc_owner_id": "163447728448"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.example",
            "aws_subnet.app_private_subnet1",
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "bastion_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-02acd641e2fe35d18",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0f46f50d9492cf001"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0ba59707b304ccc8e",
            "vpc_id": "vpc-0d1b266d3a29101c5",
            "vpc_owner_id": "163447728448"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.example",
            "aws_subnet.bastion_public_subnet",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca6914cd77aae17c",
            "arn": "arn:aws:ec2:us-east-2:163447728448:elastic-ip/eipalloc-0ca6914cd77aae17c",
            "domain": "vpc",
            "id": "eipalloc-0ca6914cd77aae17c",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-146-182-210.us-east-2.compute.amazonaws.com",
            "public_ip": "3.146.182.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00eb69d236edcfaf8",
            "arn": "arn:aws:ec2:us-east-2:163447728448:instance/i-08c26b1578349191f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c26b1578349191f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d29fb68ee979007",
            "private_dns": "ip-172-16-1-140.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.140",
            "public_ip": "18.191.236.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079956bd25872743c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f46f50d9492cf001",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04196952c538283fe"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.bastion_public_subnet",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:internet-gateway/igw-008971bf7a7fe3f81",
            "id": "igw-008971bf7a7fe3f81",
            "owner_id": "163447728448",
            "vpc_id": "vpc-07102c5f1f6695e3d"
          },
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bastion_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:internet-gateway/igw-0cb49f933d3b6e209",
            "id": "igw-0cb49f933d3b6e209",
            "owner_id": "163447728448",
            "vpc_id": "vpc-0d1b266d3a29101c5"
          },
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca6914cd77aae17c",
            "association_id": "eipassoc-0c5960fd8265ded7a",
            "connectivity_type": "public",
            "id": "nat-0368408bfb5b0e4d2",
            "network_interface_id": "eni-0912f0f1c64484e32",
            "private_ip": "172.32.0.246",
            "public_ip": "3.146.182.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-080b73f0b46f54ced",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:route-table/rtb-046143bf10adcc2fd",
            "id": "rtb-046143bf10adcc2fd",
            "owner_id": "163447728448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0368408bfb5b0e4d2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba59707b304ccc8e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07102c5f1f6695e3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.example",
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app-vpc",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bastion_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:route-table/rtb-07aeab40945b24381",
            "id": "rtb-07aeab40945b24381",
            "owner_id": "163447728448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb49f933d3b6e209",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1b266d3a29101c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bastion_igw",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion_public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a7af49d68b3afe6",
            "route_table_id": "rtb-07aeab40945b24381",
            "subnet_id": "subnet-0f46f50d9492cf001"
          },
          "dependencies": [
            "aws_internet_gateway.bastion_igw",
            "aws_route_table.bastion_public_rt",
            "aws_subnet.bastion_public_subnet",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:security-group/sg-06550cda62b023d6c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06550cda62b023d6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241026073443472600000002",
            "name_prefix": "terraform-",
            "owner_id": "163447728448",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07102c5f1f6695e3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app-vpc",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:security-group/sg-04196952c538283fe",
            "description": "Allows SSH (port 22) access to the bastion host from anywhere and allows all outbound traffic.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04196952c538283fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241026073443466500000001",
            "name_prefix": "terraform-",
            "owner_id": "163447728448",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1b266d3a29101c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:subnet/subnet-0b07eba272c266441",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.32.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b07eba272c266441",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163447728448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-private-subnet2"
            },
            "tags_all": {
              "Name": "app-private-subnet2"
            },
            "vpc_id": "vpc-07102c5f1f6695e3d"
          },
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:subnet/subnet-0e3c71fff822d485b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.32.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3c71fff822d485b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163447728448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-private-subnet2"
            },
            "tags_all": {
              "Name": "app-private-subnet2"
            },
            "vpc_id": "vpc-07102c5f1f6695e3d"
          },
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:subnet/subnet-080b73f0b46f54ced",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080b73f0b46f54ced",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163447728448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-public-subnet"
            },
            "tags_all": {
              "Name": "app-public-subnet"
            },
            "vpc_id": "vpc-07102c5f1f6695e3d"
          },
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:subnet/subnet-0f46f50d9492cf001",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46f50d9492cf001",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "163447728448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bastion-public-subnet"
            },
            "tags_all": {
              "Name": "bastion-public-subnet"
            },
            "vpc_id": "vpc-0d1b266d3a29101c5"
          },
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:vpc/vpc-07102c5f1f6695e3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-05b6bd3fba1fed985",
            "default_route_table_id": "rtb-0455e7fcc46e82989",
            "default_security_group_id": "sg-0725b352a7add4a03",
            "dhcp_options_id": "dopt-03b345fc429de73f7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07102c5f1f6695e3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0455e7fcc46e82989",
            "owner_id": "163447728448",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bastion_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:163447728448:vpc/vpc-0d1b266d3a29101c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d4940fe5621ae54c",
            "default_route_table_id": "rtb-0befb79a6cc35e5b1",
            "default_security_group_id": "sg-067a15b046bfe98f0",
            "dhcp_options_id": "dopt-03b345fc429de73f7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1b266d3a29101c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0befb79a6cc35e5b1",
            "owner_id": "163447728448",
            "tags": {
              "Name": "bastion-vpc"
            },
            "tags_all": {
              "Name": "bastion-vpc"
            }
          }
        }
      ]
    }
  ]
}